objects/Middleware_Exception__c.object
<CustomObject>
    <fields>
        <fullName>Activity_ID__c</fullName>
        <label>Activity ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Name__c</fullName>
        <label>Activity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Info_URL__c</fullName>
        <label>Additional Info URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Configuration_Name__c</fullName>
        <label>Configuration Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fault_Name__c</fullName>
        <label>Fault Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fault_Time__c</fullName>
        <label>Fault Time</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Start_Time__c</fullName>
        <label>Job Start Time</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Middleware_Job_ID__c</fullName>
        <label>Middleware Job ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orchestration_Name__c</fullName>
        <label>Orchestration Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Object_ID__c</fullName>
        <label>Related Object ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Router_Host_Name__c</fullName>
        <label>Router Host Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_User_ID__c</fullName>
        <label>Salesforce User ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <picklist>
            <picklistValues>
                <fullName>INFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WARNING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ERROR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRITICAL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Middleware Exception</label>
    <nameField>
        <label>Middleware Exception Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Middleware Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>